objects/UNITY_MuleFieldMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Mappings to keep related the fields with objects between Mulesoft and Salesforce.</description>
    <fields>
        <fullName>Sibling_Tags__c</fullName>
        <label>Sibling Tags</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceField__c</fullName>
        <label>Source Field</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceType__c</fullName>
        <label>Source Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetField__c</fullName>
        <label>Target Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetType__c</fullName>
        <label>Target Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>UNITY Mule Field Mapping</label>
    <listViews>
        <fullName>All_Fields</fullName>
        <columns>NAME</columns>
        <columns>SourceField__c</columns>
        <columns>SourceType__c</columns>
        <columns>TargetField__c</columns>
        <columns>TargetType__c</columns>
        <columns>isActive__c</columns>
        <columns>Sibling_Tags__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Fields</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Case</fullName>
        <columns>NAME</columns>
        <columns>SourceField__c</columns>
        <columns>TargetField__c</columns>
        <columns>Sibling_Tags__c</columns>
        <columns>isActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>&quot;Case &quot;</value>
        </filters>
        <label>Case</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Case_Comment</fullName>
        <columns>NAME</columns>
        <columns>SourceField__c</columns>
        <columns>TargetField__c</columns>
        <columns>isActive__c</columns>
        <columns>Sibling_Tags__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Case Comment</value>
        </filters>
        <label>Case Comment</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Vendor</fullName>
        <columns>NAME</columns>
        <columns>SourceField__c</columns>
        <columns>TargetField__c</columns>
        <columns>isActive__c</columns>
        <columns>Sibling_Tags__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Vendor</value>
        </filters>
        <label>Vendor</label>
        <language>en_US</language>
    </listViews>
</CustomObject>